--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
       },
       "uaa": {
         "kind": "xsuaa"
+      },
+      "[production]": {
+        "auth": "xsuaa"
       }
     },
     "hana": {
