--- a/mta.yaml
+++ b/mta.yaml
@@ -1,4 +1,3 @@
----
 _schema-version: '3.1'
 ID: risk-management
 version: 2.0.0
@@ -75,3 +74,15 @@ resources:
       config:
         xsappname: risk-management-${org}-${space}
         tenant-mode: dedicated
+        role-collections:
+          - name: 'RiskManager-${space}'
+            description: Manage Risks
+            role-template-references:
+            - $XSAPPNAME.RiskManager
+          - name: 'RiskViewer-${space}'
+            description: View Risks
+            role-template-references:
+            - $XSAPPNAME.RiskViewer
+        oauth2-configuration:
+          redirect-uris:
+            - https://*.cfapps.eu10-004.hana.ondemand.com/login/callback
